2001-07-03  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/date-utilities.scm: Nicholas Lee's bug fix

	* src/.cvsignore: adjust for new program

	* rpm/gnucash.spec.in: adjust for new program

	* src/Makefile.am: adjust for new program

	* src/gnucash-make-guids.c: new program to aid in GUID creation

	* src/engine/sql/putil.h: Alex Zepeda's patch converting atol->strtoll.

	* src/scm/report/taxtxf.scm: fix bug, eliminate use of append

2001-07-02  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-dateedit.c: sync with datecell-gnome.c

	* src/register/gnome/datecell-gnome.c: use GDate to do
	date manipulations.

	* src/scm/bootstrap.scm.in: instead of the scheme command,
	just tell the user to run gnucash once as root.

2001-07-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.[ch]: implement towupper and iswlower
	if they are missing

	* src/register/quickfillcell.c: include gnc-ui-util.h

	* src/register/QuickFill.c: include gnc-ui-util.h

	* configure.in: check for towupper

2001-06-29  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-account-xml-v2.c: Alex Zepeda's patch
	adding a missing include.

2001-06-27  Dave Peticolas  <dave@krondo.com>

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: use wide character conversion
	functions

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* po/fr.po: Paul Poulain's french translations

2001-06-26  Dave Peticolas  <dave@krondo.com>

	* src/engine/sixtp-dom-parsers.c: same as below

	* src/engine/gnc-commodity-xml-v2.c: same as below

	* src/engine/gnc-account-xml-v2.c: don't use node content member
	directly -- if libxml was configured to use buffers, this won't
	work.

	* src/engine/gnc-commodity-xml-v2.c (set_commodity_value): strip
	string before setting things. (James LewisMoss patch)

	* src/engine/io-gncxml-v2.c (gnc_book_write_to_xml_file_v2): check
	return of fclose. (James LewisMoss patch)
